// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapDispatchToProps correctly sets up dispatches 1`] = `
Object {
  "graphql": Object {
    "query": "mutation ($personId: ID, $communityId: ID) {
        addModerator(personId: $personId, communityId: $communityId) {
          id
          moderators (first: 100) {
            items {
              id
              name
              avatarUrl
            }
          }
        }
      }",
    "variables": Object {
      "communityId": 11,
      "personId": 10,
    },
  },
  "meta": Object {
    "communityId": 11,
    "optimistic": true,
    "personId": 10,
  },
  "type": "ADD_MODERATOR",
}
`;

exports[`mapDispatchToProps correctly sets up dispatches 2`] = `
Object {
  "graphql": Object {
    "query": "mutation ($personId: ID, $communityId: ID, $isRemoveFromCommunity: Boolean) {
        removeModerator(personId: $personId, communityId: $communityId, isRemoveFromCommunity: $isRemoveFromCommunity) {
          id
          moderators (first: 100) {
            items {
              id
              name
              avatarUrl
            }
          }
        }
      }",
    "variables": Object {
      "communityId": 11,
      "isRemoveFromCommunity": true,
      "personId": 10,
    },
  },
  "meta": Object {
    "communityId": 11,
    "isRemoveFromCommunity": true,
    "optimistic": true,
    "personId": 10,
  },
  "type": "REMOVE_MODERATOR",
}
`;

exports[`mapDispatchToProps correctly sets up dispatches 3`] = `
Object {
  "graphql": Object {
    "query": "query ($id: ID, $autocomplete: String) {
        community (id: $id) {
          id
          members (first: 10, autocomplete: $autocomplete) {
            hasMore
            items {
              id
              name
              avatarUrl
            }
          }
        }
      }",
    "variables": Object {
      "autocomplete": "autocomplete",
      "id": 11,
    },
  },
  "meta": Object {
    "extractModel": "Community",
  },
  "type": "FETCH_MODERATOR_SUGGESTIONS",
}
`;

exports[`mapDispatchToProps correctly sets up dispatches 4`] = `
Object {
  "type": "CLEAR_MODERATOR_SUGGESTIONS",
}
`;

exports[`mapStateToProps works 1`] = `
Object {
  "moderatorSuggestions": Array [],
  "moderators": Array [
    SessionBoundModel {
      "_fields": Object {
        "id": "1",
      },
    },
    SessionBoundModel {
      "_fields": Object {
        "id": "2",
      },
    },
  ],
}
`;
